theme: avoid scrollbar for long headings #92

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -688,6 +688,17 @@ hr {
 #body-inner pre {
     white-space: pre-wrap;
 }
+#body-inner h1,
+#body-inner h2,
+#body-inner h3,
+#body-inner h4,
+#body-inner h5,
+#body-inner h6 {
+    /* big titles cause a horizontal scrollbar - fixing this by wrapping text */
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+}
+
 table {
     border: 1px solid #ccc;
     margin-bottom: 1rem;
